# ksef-fastapi

./: .env.example  .gitignore  .windsurfignore  README.md  README_CLIENT.md  main.py  pyproject.toml  ruff.toml  tmp_ksef_xades_response.json  tmp_signed_auth_request.xml
.windsurf/rules/: project.md
.windsurf/workflows/: auth.md
_docs/: AUTHENTICATION_TESTING.md  CERTIFICATES_CONVERT.md  FOLDERS.md  KSEF_CERTIFICATES.md  MANUAL_CLI.md  PROJECT_STRUCTURE.md  SQLITE_SETUP.md
_docs_ksef/: api-changelog.md  certyfikaty-KSeF.md  kody-qr.md  tokeny-ksef.md  uprawnienia.md
_docs_ksef/auth/: podpis-xades.md
_docs_ksef/faktury/: sesja-sprawdzenie-stanu-i-pobranie-upo.md
alembic/: env.py
app/: cli.py  main.py
app/api/: deps.py
app/api/routers/: __init__.py  auth_testing_router.py  (+6 more)
app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
app/schemas/: auth.py  common.py  errors.py  invoices.py  sessions.py
app/services/: audit_service.py  auth_service.py  invoice_service.py  retry_service.py  session_service.py  status_service.py
app/temporal/: task_queues.py  worker.py
app/utils/: datetime_utils.py  hash_utils.py  xml_utils.py
app/workers/: poll_ksef_statuses.py  retry_failed_submissions.py
certificates/: mf_public_encryption_cert.pem  private_key.pem  xades_signing_cert.pem
migrations/: env.py
migrations/versions/: 8d174e55a199_initial_migration_for_sqlite.py
scripts/: auth_testing.sh  certificate_check_demo.sh  download_mf_certificate.py  download_mf_certificate.sh  generate_openapi_client.sh  run_dev.sh  run_worker.sh
(+57 files in other folders)
