[project]
name = "ksef-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-keycloak>=7.1.1",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlalchemy[aiosqlite]>=2.0.48",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "alembic-utils>=0.8.8",
    "ruff>=0.15.5",
]

[tool.uv]
package = true

[project.scripts]
dev = "app.cli:run_dev"   # or "app.main:run_dev" if you put it in main.py

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

# Optional: exclude junk dirs explicitly
exclude = ["migrations*", "plop_templates*", "tests*", "_docs*", "_seed_data*"]

